extracted PDF-Viewer to own js and css files, created View for Agency

--- a/app/ViewDesign.html
+++ b/app/ViewDesign.html
@@ -5,14 +5,14 @@
     <title>Editor - DesignRevision</title>
     <link href="../files/img/favicon.ico" rel="icon" type="image/x-icon">
     <link href="../files/css/Viewport.css" rel="stylesheet">
-    <link href="../files/css/CommentDesign.css" rel="stylesheet">
+    <link href="../files/css/ViewDesign.css" rel="stylesheet">
 </head>
 <body>
 <!-- The pdf.js library and controls-->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.js"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.min.js"></script>
 <script src="../files/js/viewport.js"></script>
-<script async defer src="../files/js/CommentDesign.js"></script>
+<script async defer src="../files/js/ViewDesign.js"></script>
 <div id="titleBar">
     <p id="titleCard">Designvorschlag für /</p>
 </div>
@@ -21,9 +21,6 @@
 <div id="commentContainer" style="top: 20px; left: 10px;">
     <div id="commentArea" style="display: none; width: 10px; height: 10px; z-index: -3;"></div>
 </div>
-</div>
-<div class="toolbox" style="top: 43%;">
-    <button id="createComment" style="left: 40px; right: 40px;">Kommentarmodus einschalten</button>
 </div>
 <div class="lowerBar">
     <button class="button" id="decPage" style=" left: 42%;">-</button>
