--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
+    <link href="../files/img/favicon.ico" rel="icon" type="image/x-icon">
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Reset Password</title>
     <link href="../files/css/Login.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 </head>
 <body>
 <div class="form">
     <h1>Geben sie ihr neues Passwort ein</h1>
     <form action="" id="resetPass" method="post">
-        <label>Passwort:<br>
+        <label>Passwort: </label><br>
+        <div class="input-container">
             <input id="password" name="password" onkeyup="char_count1();" placeholder="Passwort" required
-                   style="width: 300px"
+
                    type="password">
-        </label>
-        <progress id="progress" max="100" value="0"></progress>
+            <i class="material-icons" onclick="passwordToggle()">
+                visibility
+            </i>
+        </div>
+        <div id="progressBarBorder"style="border: 3px solid white;border-radius: 2px;margin-top: 10px;background: white; width: 50%">
+            <div id="progressBar" style="height:24px;width:1%;background-color:#ff352c;border-radius: 4px;color: white;text-align: center"></div>
+        </div>
         <span id="feedback"></span>
         <br><br>
-        <label>Passwort wiederholt<br>
+        <label>Passwort wiederholt</label><br>
+        <div class="input-container">
             <input id="againPassword" name="againPassword" onkeyup="char_count2()" placeholder="Passwort wiederholt"
-                   required style="width: 300px" type="password">
-        </label>
+                   required type="password">
+            <i class="material-icons" onclick="passwordToggle2()">
+                visibility
+            </i>
+        </div>
         <span id="samePass"></span>
         <br><br>
         <input id="btnLogin" name="btnLogin" type="submit" value="Login">
@@ -35,12 +47,11 @@
     let resetpass = document.getElementById("resetPass");
     resetpass.addEventListener('submit', function (evt) {
         let call = document.getElementById("feedback");
-        let feedback = document.getElementById('progress');
+        let feedback = document.getElementById('progressBar');
         if (status) {
-
-                call.style.color = "black";
-                feedback.value = 0;
-                call.innerHTML = "<strong>Das Passwort muss sicher sein</strong>";
+            call.style.color = "black";
+            feedback.style.width = "0%";
+            call.innerHTML = "<strong>Das Passwort muss sicher sein</strong>";
             evt.preventDefault();
 
         }
@@ -54,7 +65,7 @@
         if (!(pass1 === pass2)) {
             samePass1.style.color = "red";
             samePass1.innerHTML = "<strong>Passwörter verschieden</strong>";
-        }else{
+        } else {
             samePass1.innerHTML = "";
         }
     }
@@ -63,36 +74,57 @@
 
         let val = document.getElementById('password').value;
         let call = document.getElementById('feedback');
-        let feedback = document.getElementById('progress');
+        let feedback = document.getElementById('progressBar');
 
         if (val.length > 7) {
             if (val.match(/\d+/) && val.match(/[a-zäöü]+/) && val.match(/\W/) && val.match(/[[A-ZÄÖU]+/)) {
                 call.style.color = "#428c0d";
-                call.innerHTML = "<strong>100% - Das Passwort ist sehr sicher!</strong>";
-                feedback.value = 100;
-                status=false;
+                call.innerHTML = "<strong>Das Passwort ist sehr sicher!</strong>";
+                feedback.style.background = "#428c0d";
+                feedback.style.width= "100%";
+                feedback.innerHTML="100%";
+                status = false;
 
             } else if (val.match(/\d+/) && val.match(/[a-zäöü]+/) || val.match(/\W/) && val.match(/[a-zäöü]+/)) {
                 call.style.color = "#ff9410";
-                call.innerHTML = "<strong>75% - Das Passwort fast sicher!</strong>";
-                feedback.value = 75;
-                status=true;
+                call.innerHTML = "<strong>Das Passwort fast sicher!</strong>";
+                feedback.style.background = "#ff9410";
+                feedback.style.width = "75%";
+                feedback.innerHTML="75%";
+                status = true;
             } else {
                 call.style.color = "#ff9410";
-                call.innerHTML = "<strong>50% -Das Passwort ist unsicher!</strong>";
-                feedback.value = 50;
+                call.innerHTML = "<strong>Das Passwort ist unsicher!</strong>";
+                feedback.style.background = "#ff9410";
+                feedback.style.width = "50%";
+                feedback.innerHTML="50%";
             }
         } else {
             call.style.color = "#ff352c";
-            call.innerHTML = "<strong>25% - Das Passwort ist zu kurz!</strong>";
-            feedback.value = 25;
-            status=true;
+            call.innerHTML = "<strong>Das Passwort ist zu kurz!</strong>";
+            feedback.style.background = "#ff352c";
+            feedback.style.width = "25%";
+            feedback.innerHTML="25%";
+            status = true;
         }
         if (val.length === 0) {
             call.innerHTML = "";
-            feedback.value = 0;
-            status=true;
+            feedback.style.background = "#ff352c";
+            feedback.style.width = "0%";
+            feedback.innerHTML="0%";
+            status = true;
 
+        }
+        let pass1 = document.querySelector("#password").value;
+        let pass2 = document.querySelector("#againPassword").value;
+        let samePass1 = document.getElementById("samePass");
+        if(pass2.length>0) {
+            if (!(pass1 === pass2)) {
+                samePass1.style.color = "red";
+                samePass1.innerHTML = "<strong>Passwörter verschieden</strong>";
+            } else {
+                samePass1.innerHTML = "";
+            }
         }
     }
 
@@ -100,7 +132,8 @@
         let value = decodeURIComponent((RegExp(name + '=' + '(.+?)(&|$)').exec(location.search) || [, ""])[1]);
         return (value !== 'null') ? value : false;
     }
-    window.onload=function mailOrPass() {
+
+    window.onload = function mailOrPass() {
         let success = getURLParameter("success");
         if (success === "pswd") {
             let feedback = document.getElementById("samePass");
@@ -108,6 +141,30 @@
             feedback.innerHTML = "<strong>Passwort erfolgreich ge&auml;ndert</strong>"
         }
     };
+
+    function passwordToggle() {
+        const visibilityToggle = document.querySelector('.material-icons');
+        let password = document.getElementById('password');
+        if (password.type === "password") {
+            password.type = "text";
+            visibilityToggle.innerHTML = "visibility_off";
+        } else {
+            password.type = "password";
+            visibilityToggle.innerHTML = "visibility";
+        }
+    }
+
+    function passwordToggle2() {
+        const visibilityToggle = document.querySelectorAll('.material-icons');
+        let password = document.getElementById('againPassword');
+        if (password.type === "password") {
+            password.type = "text";
+            visibilityToggle[1].innerHTML = "visibility_off";
+        } else {
+            password.type = "password";
+            visibilityToggle[1].innerHTML = "visibility";
+        }
+    }
 
 </script>
 </html>
