--- a/login/loginforgotpass.html
+++ b/login/loginforgotpass.html
@@ -25,7 +25,7 @@
     resetPass.addEventListener('submit', function (evt) {
         if (!(emailIsValid(document.querySelector("#email").value))) {
             statusEmail.style.color = "red";
-            statusEmail.innerHTML = "<strong>Gültige E-mail eingeben</strong>";
+            statusEmail.innerHTML = "<strong>G&uuml;ltige E-mail eingeben</strong>";
             evt.preventDefault();
         }
 
