changed File Upload Design

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -54,7 +54,7 @@
                value="Datei suchen"/>
         <div class="image-preview" id="imagePreview">
             <img alt="PDF" id="pdfIcon" src="../files/img/pdf.icon.png"
-                 style="display:none;width: 10%;height: 10%"/><br>
+                 style="display:none;width: 25%;height: 80%;padding-left: 5px"/><br>
             <span class="image-preview__file"></span>
             <span class="image-preview__default-text">Keine Datei ausgew&auml;lt</span>
         </div>
