improved upload and switched to Delet icons in add E-mail-fields

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -7,7 +7,8 @@
     <link href="../files/css/CustomerDashboard..css" rel="stylesheet">
     <script src="../files/js/CustumorDashboard.js"></script>
     <link href="../files/img/favicon.ico" rel="icon" type="image/x-icon">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 </head>
 <body>
 <div class="topDivs">
