--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -22,8 +22,12 @@
     <div id="commentArea" style="display: none; width: 10px; height: 10px; z-index: -3;"></div>
 </div>
 </div>
-<div class="toolbox" style="top: 43%;">
-    <button id="createComment" style="left: 40px; right: 40px;">Kommentarmodus einschalten</button>
+<div class="toolbox" style="top: 40%;">
+    <button id="createComment" style="left: 40px; right: 40px; background-color: Transparent; border: solid transparent;"><img src="../files/img/addComment.png" style="opacity: 0.7;
+    filter: alpha(opacity=40);"></img></button>
+	<br></br>
+	<button id="movePdf" style="left: 40px; right: 40px; background-color: Transparent; border: solid transparent;"><img src="../files/img/move.png" style="opacity: 0.7;
+    filter: alpha(opacity=40);"></img></button>
 </div>
 <div class="lowerBar">
     <button class="button" id="decPage" style=" left: 42%;">-</button>
