partial Button-Groups

--- a/app/ViewDesign.html
+++ b/app/ViewDesign.html
@@ -21,6 +21,9 @@
 <div id="commentContainer" style="top: 20px; left: 10px;">
     <div id="commentArea" style="display: none; width: 10px; height: 10px; z-index: -3;"></div>
 </div>
+<div class="toolbox" style="top: 40%;">
+	<button id="movePdf" style="left: 40px; right: 40px; background-color: Transparent; border: solid transparent;"><img src="../files/img/move.png" style="opacity: 0.7;
+    filter: alpha(opacity=40);"></img></button>
 </div>
 <div class="lowerBar">
     <button class="button" id="decPage" style=" left: 42%;">-</button>
