--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -23,10 +23,10 @@
 </div>
 </div>
 <div class="toolbox" style="top: 40%;">
-    <button id="createComment" style="left: 40px; right: 40px; background-color: Transparent; border: solid transparent;"><img src="../files/img/addComment.png" style="opacity: 0.7;
+    <button id="createComment" class="disSelected" style="left: 40px; right: 40px; background-color: Transparent;"><img src="../files/img/addComment.png" style="opacity: 0.7;
     filter: alpha(opacity=40);"></img></button>
 	<br></br>
-	<button id="movePdf" style="left: 40px; right: 40px; background-color: Transparent; border: solid transparent;"><img src="../files/img/move.png" style="opacity: 0.7;
+	<button id="movePdf" class="disSelected" style="left: 40px; right: 40px; background-color: Transparent;"><img src="../files/img/move.png" style="opacity: 0.7;
     filter: alpha(opacity=40);"></img></button>
 </div>
 <div class="lowerBar">
