--- a/app/ViewDesign.html
+++ b/app/ViewDesign.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <!-- The pdf.js library and controls-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.js"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.min.js"></script>-->
 <script src="../files/js/viewport.js"></script>
 <script async defer src="../files/js/ViewDesign.js"></script>
 <div id="titleBar">
@@ -21,9 +21,12 @@
 <div id="commentContainer" style="top: 20px; left: 10px;">
     <div id="commentArea" style="display: none; width: 10px; height: 10px; z-index: -3;"></div>
 </div>
-<div class="toolbox" style="top: 40%;">
-	<button id="movePdf" style="left: 40px; right: 40px; background-color: Transparent; border: solid transparent;"><img src="../files/img/move.png" style="opacity: 0.7;
-    filter: alpha(opacity=40);"></img></button>
+<div class="toolbox" style="top: 40%; outline-style:none;box-shadow:none;border-color:transparent;">
+    <button class="disSelected" id="movePdf" style="left: 40px; right: 40px; background-color: Transparent;"><img
+            alt="Move" class="icon" src="../files/img/move.png"/></button>
+    <br/>
+    <button class="disSelected" id="zoomPdf" style="left: 40px; right: 40px; background-color: Transparent;"><img
+            alt="Zoom" class="icon" src="../files/img/zoom.png"/></button>
 </div>
 <div class="lowerBar">
     <button class="button" id="decPage" style=" left: 42%;">-</button>
