--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -36,7 +36,7 @@
         <span id="nameToLong"></span><br>
         <span id="emailSpan">
         <label>
-            <input id="email" name="email" placeholder="E-mail" style="width: 55%" type="text">
+            <input id="email" name="email" placeholder="E-mail" style="width: 55%" type="email">
         </label>
             <select id="AdminOrMember" name="AdminOrMember" required>
                 <option disabled hidden selected value="">Auswählen</option>
