added looking for status xhr methods

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -73,7 +73,7 @@
 </dialog>
 <h1 id="message" style="color: red;text-align: center;display: none">Keine Treffer</h1>
 <div class="sendFeedBack" id="sendFeedBack">
-    <h1>Erfolgreich gesendet</h1>
+    <h1>Hello World</h1>
 </div>
 </body>
 </html>
