--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -76,4 +76,5 @@
     <h1>Hello World</h1>
 </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </html>
