added image cdn

--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://cdn-design-revision.netlify.com/files/img/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>New Account</title>
