--- a/login/mobileSeite.html
+++ b/login/mobileSeite.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://cdn-design-revision.netlify.com/files/img/favicon.ico" type="image/x-icon">
     <title>Mobile Geräte</title>
 </head>
 <body>
 <div style="background-color: #0cfad6;border-radius: 20px;transform:translate(30%, 40%);margin-right: 40%">
-    <img  alt="tick" height="200" src="../files/img/logo.png" width="200">
+    <img  alt="tick" height="200" src="https://cdn-design-revision.netlify.com/files/img/logo.png" width="200">
     <h1 style="text-align: center">Es tut uns Leid aber derzeit unterst&uuml;tzen wir  keine Mobile Geräte</h1>
 </div>
 </body>
