--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -6,13 +6,13 @@
     <title>Customer Dashboard</title>
     <link href="../files/css/CustomerDashboard..css" rel="stylesheet">
     <script src="../files/js/CustumorDashboard.js"></script>
-    <link href="../files/img/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="https://cdn-design-revision.netlify.com/files/img/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
 </head>
 <body>
 <div class="topDivs">
-        <img alt="tick" height="100%" src="../files/img/logo.png"
+        <img alt="tick" height="100%" src="https://cdn-design-revision.netlify.com/files/img/logo.png"
              style="float: left"
              width="100">
     <div id="pageLoader"></div>
@@ -52,7 +52,7 @@
                type="button"
                value="Datei suchen"/>
         <div class="image-preview" id="imagePreview">
-            <img alt="PDF" id="pdfIcon" src="../files/img/pdf.icon.png"
+            <img alt="PDF" id="pdfIcon" src="https://cdn-design-revision.netlify.com/files/img/pdf.icon.png"
                  style="display:none;width: 25%;height: 80%;padding-left: 5px"/><br>
             <span class="image-preview__file"></span>
             <span class="image-preview__default-text">Keine Datei ausgew&auml;lt</span>
