--- a/app/VersionOverview.html
+++ b/app/VersionOverview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="../files/img/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="https://cdn-design-revision.netlify.com/files/img/favicon.ico" rel="icon" type="image/x-icon">
     <title>Versionen</title>
     <link rel="stylesheet" href="../files/css/VersionOverview.css">
     <script src="../files/js/VersionOverview.js"></script>
@@ -11,7 +11,7 @@
 <body>
 <div class="topimg">
     <a href="../app/CustumorDashboard.html">Zur&uuml;ck</a>
-    <img  alt="tick" height="100" src="../files/img/logo.png"
+    <img  alt="tick" height="100" src="https://cdn-design-revision.netlify.com/files/img/logo.png"
          style="float: left"
          width="100">
     <h1>Versions&uuml;sicht</h1>
