fixed some Problems

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -43,8 +43,9 @@
                 <option value="Member">Member</option>
                 <option value="Admin">Admin</option>
             </select></span>
-        <span id="messageRole"></span><br><span id="messageEmail"></span><br>
-        <span id="messageDoubleSelected"></span>
+        <span id="messageRole"></span><br>
+        <span id="messageEmail"></span><br>
+        <span id="messageDoubleSelected"></span><br>
         <input onclick="addEmailField()"
                type="button" value="Weiterer Nutzer auswählen"/> <br>
         <input accept="application/pdf" id="inputFile" name="inputFile" style="display: none;" type="file"/>
