final bar fixes

--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -47,7 +47,7 @@
     </label>
     <button class="button" id="incPage" style="right: 40%;">+</button>
     <div class="progress" id="loadingBar" style="width: 97%; margin-left: 1%; margin-right: 1%; top: 58%; height: 35%;">
-        <div class="progress-value" id="loading" style="height: 35%;"></div>
+        <div class="progress-value" id="loading" style="height: 35%; width: 10px;"></div>
     </div>
 </div>
 </body>
