--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -21,6 +21,26 @@
 <div id="commentContainer" style="top: 20px; left: 10px;">
     <div id="commentArea" style="display: none; width: 10px; height: 10px; z-index: -3;"></div>
 </div>
+<div style="position: relative; top: 50%; left: 33%; background-color: #333333; z-index: 10; width: 35%;
+ height: 250px">
+    <table>
+        <tr>
+            <h1 style="color: white; font-size: 24px; left: 15px; top: 10px; position: relative;">Kommentar
+                erstellen:</h1>
+            <p style="position: absolute; top: 0; color: white; right: 20px">email@thingymagics.com</p>
+        </tr>
+        <tr>
+            <textarea style="position: absolute; left: 15px; width: 92%; height: 60%; resize: none;"></textarea>
+        </tr>
+        <tr>
+            <div style="bottom: 40px; position: absolute;">
+                <button style="background-color: #00620b; left: 12px; position: absolute;">Speichern</button>
+                <button style="background-color: #910000; left: 122px; position: absolute;">Verwerfen</button>
+            </div>
+        </tr>
+    </table>
+
+</div>
 <div class="toolbox" style="top: 40%; outline-style:none;box-shadow:none;border-color:transparent;">
     <button class="disSelected" id="movePdf" style="left: 40px; right: 40px; background-color: Transparent;"><img
             alt="Move" class="icon" src="https://cdn-design-revision.netlify.com/files/img/move.png"/></button>
