--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -34,6 +34,7 @@
             <input id="projectname" name="projectname" placeholder="Projektname" required type="text">
         </label><br>
         <span id="nameToLong"></span><br>
+        <span id="AddOrDelete"></span><br>
         <span id="emailSpan">
         <label>
             <input id="email" name="email" placeholder="E-mail" style="width: 60%" type="email" required >
