--- a/app/ViewDesign.html
+++ b/app/ViewDesign.html
@@ -28,22 +28,22 @@
     <button class="disSelected" id="zoomPdf" style="left: 40px; right: 40px; background-color: Transparent;"><img
             alt="Zoom" class="icon" src="https://cdn-design-revision.netlify.com/files/img/zoom.png"/></button>
 </div>
-<div class="lowerBar">
-    <button class="button" id="decPage" style=" left: 42%;">-</button>
+<div class="lowerBar" style="outline-style:none;box-shadow:none;border-color:transparent;">
+    <button class="button" id="decPage" style="left: 40%;">-</button>
     <label>
         <input class="textField" id="currentPage" onkeypress="return event.charCode >= 48 && event.charCode <= 57"
-               style="left: 44%; margin-left: 20px; "
+               style="right: 53%;"
                type="text" value="1"/>
     </label>
     <p class="pageNumField">von</p>
     <label>
         <input class="textField" id="lastPage" onkeypress="return event.charCode >= 48 && event.charCode <= 57" readonly
-               style="right: 44%; margin-right: 20px;" type="text"
+               style="left: 53%;" type="text"
                value="999"/>
     </label>
-    <button class="button" id="incPage" style="right: 42%;">+</button>
-    <div id="loadingBar" style="right: 20px; left: 20px;">
-        <div id="loading" style="right: 25px; left: 25px; width: 10px;"></div>
+    <button class="button" id="incPage" style="right: 40%;">+</button>
+    <div class="progress" id="loadingBar" style="width: 97%; margin-left: 1%; margin-right: 1%; top: 58%; height: 35%;">
+        <div class="progress-value" id="loading" style="height: 35%; width: 10px;"></div>
     </div>
 </div>
 </body>
