Changed everything to real Users

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -63,6 +63,7 @@
                type="button"
                value="Member ausw&#228;hlen"/><br>
         <input id="submitButton" type="submit" value="Speichern">
+        <b id="loeschen" >Kunde löschen</b>
         <div id="loader"><span id="percentage" style="display: none"></span></div>
     </form>
 </div>
