--- a/app/VersionOverview.html
+++ b/app/VersionOverview.html
@@ -6,7 +6,9 @@
     <link href="https://cdn-design-revision.netlify.com/files/img/favicon.ico" rel="icon" type="image/x-icon">
     <title>Versionen</title>
     <link rel="stylesheet" href="../files/css/VersionOverview.css">
+    <script src="../files/js/message.js"></script>
     <script src="../files/js/VersionOverview.js"></script>
+    <link rel="stylesheet" href="../files/css/message.css">
 </head>
 <body>
 <div class="topimg">
@@ -45,5 +47,7 @@
         </div>
 </div>
 </div>
+<!-- response message if sending was successful -->
+<div class="warn" id="mes"></div>
 </body>
 </html>
