--- a/app/VersionOverview.html
+++ b/app/VersionOverview.html
@@ -14,9 +14,9 @@
 <div class="topimg">
     <a href="../app/CustumorDashboard.html">Zur&uuml;ck</a>
     <img  alt="tick" height="100" src="https://cdn-design-revision.netlify.com/files/img/logo.png"
-         style="float: left"
-         width="100">
-    <h1>Versions&uuml;sicht</h1>
+          style="float: left"
+          width="100">
+    <h1>Versions&uuml;bersicht</h1>
 
 </div>
 <div class="space">
@@ -24,18 +24,18 @@
 
 <div class="table">
     <div class="row">
-<div class="nummer">
-<p>Nummer</p>
-</div>
-<div class="link">
-<p>Link</p>
-</div>
-<div class="ZuletztBearbeitet">
-<p>Zuletzt Bearbeitet</p>
-</div>
-</div>
+        <div class="nummer">
+            <p>Nummer</p>
+        </div>
+        <div class="link">
+            <p>Link</p>
+        </div>
+        <div class="ZuletztBearbeitet">
+            <p>Zuletzt Bearbeitet</p>
+        </div>
+    </div>
 
-<div class="row">
+    <div class="row">
         <div class="tnummer" id="tnummer">
 
         </div>
@@ -45,7 +45,7 @@
         <div class="tZuletztBearbeitet" id="tZuletztBearbeitet">
 
         </div>
-</div>
+    </div>
 </div>
 <!-- response message if sending was successful -->
 <div class="warn" id="mes"></div>
